<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gemisis.mearmbluetoothapp.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_forward"
        android:id="@+id/move_forward_button"
        android:layout_above="@+id/move_back_button"
        android:layout_alignParentStart="true"
        android:onClick="move_forward"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_left"
        android:id="@+id/rotate_left_button"
        android:layout_above="@+id/rotate_right_button"
        android:layout_toEndOf="@+id/move_forward_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_right"
        android:id="@+id/rotate_right_button"
        android:layout_below="@+id/move_forward_button"
        android:layout_toEndOf="@+id/move_back_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_back"
        android:id="@+id/move_back_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grab_button"
        android:id="@+id/grab_button"
        android:layout_above="@+id/release_button"
        android:layout_alignEnd="@+id/release_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_button"
        android:id="@+id/release_button"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rotate_right_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/info_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/move_forward_button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_button"
        android:src="@drawable/ic_help_grey600_36dp"
        android:layout_below="@+id/grab_button"
        android:layout_toEndOf="@+id/grab_button" />
</RelativeLayout>
